# MNIST-classifier

./: README  data_loader.py  data_visualizer.py  main.ipynb  main.py  nn_classes.py  nn_trainer.py  pyproject.toml
